# vxgFFMpeg

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/vxg/vxgffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cmdutils.c  ffmpeg.c  ffmpeg_opt.c  mb_ff.c
app/src/main/cpp/include/comm/: arm_config.h  cmdutils.h  ffmpeg.h
app/src/main/cpp/include/libavcodec/: avcodec.h  mathops.h  version.h
app/src/main/cpp/include/libavfilter/: avfilter.h  version.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h  network.h  os_support.h  version.h
app/src/main/cpp/include/libavutil/: internal.h  libm.h  pixfmt.h  reverse.h
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/cpp/include/libswscale/: version.h
app/src/main/cpp/src/: cmdutils.c  ffmpeg.c  ffmpeg_opt.c  mb_ff.cpp
app/src/main/java/com/example/vxg/vxgffmpeg/: FFMpegUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/vxg/vxgffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
